--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>To do List</title>
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_09szb28ci8uxr.css">
 </head>
 <body>
     <div id="root"></div>
